objects/Subcategorys__x.object
<CustomObject>
    <description>Subcategorys</description>
    <externalDataSource>OrderDB</externalDataSource>
    <externalName>Subcategorys</externalName>
    <fields>
        <fullName>categoryID__c</fullName>
        <description>categoryID</description>
        <externalDeveloperName>categoryID</externalDeveloperName>
        <label>categoryID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subcategoryIndex__c</fullName>
        <description>subcategoryIndex</description>
        <externalDeveloperName>subcategoryIndex</externalDeveloperName>
        <label>subcategoryIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>subcategoryName__c</fullName>
        <description>subcategoryName</description>
        <externalDeveloperName>subcategoryName</externalDeveloperName>
        <label>subcategoryName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Subcategorys</label>
    <pluralLabel>Subcategorys</pluralLabel>
</CustomObject>